Clean up SchemaVersionTest: remove obsolete hacks, address warnings